--- a/frontend/src/components/container/InformationPage/informationfcn.scss
+++ b/frontend/src/components/container/InformationPage/informationfcn.scss
@@ -1,5 +1,4 @@
 // src/components/container/InformationPage/informationfcn.scss
-$primaryColor: #5eb6f6;
 
 .informaion-container {
   z-index: 500;
@@ -12,11 +11,11 @@ $primaryColor: #5eb6f6;
 }
 
 .image-size {
-  position: relative; // 추가된 부분
+  position: relative;
   display: flex;
   justify-content: center;
   width: 100%;
-  // width: 363px;
+
   height: 200px;
   margin-top: 0.7rem;
   .overlay-div-container {
@@ -25,164 +24,10 @@ $primaryColor: #5eb6f6;
     left: 0;
     width: 100%;
     height: 100%;
-    // background-color: rgba(255, 255, 255, 0.5); // 반투명 배경으로 확인 용이하게 함.
 
     display: flex;
     justify-content: center;
     align-items: center;
-
-    /* 여기서부터 내부 텍스트 스타일 */
-
-    &.design {
-      // design 버튼이 active일 때만 적용되는 스타일
-      .tag-div1 {
-        // 디자인대학에 해당하는 tag-div 스타일
-      }
-
-      .tag-div2 {
-        // 디자인대학에 해당하는 tag-div 스타일
-      }
-    }
-    &.gate {
-      .tag-div1 {
-        position: absolute;
-        top: 111px;
-        left: 39px;
-        background-color: #fdf3d1;
-        width: 21px;
-        height: 34px;
-        &.active {
-          background-color: red;
-        }
-      }
-      .tag-div2 {
-        position: absolute;
-        top: 72px;
-        left: 39px;
-        background-color: #fdf3d1;
-        width: 21px;
-        height: 34px;
-        &.active {
-          background-color: red;
-        }
-      }
-      .tag-div3 {
-        position: absolute;
-        top: 48px;
-        left: 60px;
-        background-color: #fdf3d1;
-        width: 34px;
-        height: 21px;
-
-        &.active {
-          background-color: red;
-        }
-      }
-
-      .tag-div4 {
-        position: absolute;
-        top: 48px;
-        left: 99px;
-        background-color: #fdf3d1;
-        width: 34px;
-        height: 21px;
-
-        &.active {
-          background-color: red;
-        }
-      }
-
-      .tag-div5 {
-        position: absolute;
-        top: 48px;
-        left: 137px;
-        background-color: #fdf3d1;
-        width: 34px;
-        height: 21px;
-
-        &.active {
-          background-color: red;
-        }
-      }
-
-      .tag-div6 {
-        position: absolute;
-        top: 48px;
-        left: 175px;
-        background-color: #fdf3d1;
-        width: 34px;
-        height: 21px;
-
-        &.active {
-          background-color: red;
-        }
-      }
-
-      .tag-div7 {
-        position: absolute;
-        top: 48px;
-        left: 214px;
-        background-color: #fdf3d1;
-        width: 34px;
-        height: 21px;
-
-        &.active {
-          background-color: red;
-        }
-      }
-
-      .tag-div8 {
-        position: absolute;
-        top: 72px;
-        left: 243px;
-        background-color: #fdf3d1;
-        width: 21px;
-        height: 34px;
-
-        &.active {
-          background-color: red;
-        }
-      }
-
-      .tag-div9 {
-        position: absolute;
-        top: 111px;
-        left: 243px;
-        background-color: #fdf3d1;
-        width: 21px;
-        height: 34px;
-
-        &.active {
-          background-color: red;
-        }
-      }
-
-      .tag-div10 {
-        position: absolute;
-        top: 140px;
-        left: 280px;
-        background-color: #fdf3d1;
-        width: 34px;
-        height: 21px;
-
-        &.active {
-          background-color: red;
-        }
-      }
-
-      .tag-div11 {
-        position: absolute;
-        top: 140px;
-        left: 320px;
-        background-color: #fdf3d1;
-        width: 34px;
-        height: 21px;
-
-        &.active {
-          background-color: red;
-        }
-      }
-    }
   }
 }
 
