--- a/frontend/src/styles/components/TimelinePage/DetailTable1.scss
+++ b/frontend/src/styles/components/TimelinePage/DetailTable1.scss
@@ -38,6 +38,7 @@
     display: flex;
     flex-direction: row;
     width : auto;
+    margin-right : 12px;
 }
 
 .TimeList_item {
@@ -53,6 +54,7 @@
     border : none;
     border-radius: 50%;
     background-color: lightgray;
+    margin-left: auto;
 }
 
 .DetailTable1_HorizonBar {
@@ -140,4 +142,39 @@
 .Information_TextBox {
     display: flex;
     flex-direction: column;
+
+    padding-left : 14px;
+}
+
+.Information_MainTitle {
+    color: var(--black, #212121);
+    font-family: Spoqa Han Sans Neo;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.Information_SubTitle {
+    color: var(--gray-2, #919094);
+    font-family: Spoqa Han Sans Neo;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.Information_time {
+    color: #AB85A2;
+    font-family: Spoqa Han Sans Neo;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.Information_DisplaySet {
+    display : flex;
+    flex-direction: row;
+    margin-top : 6px;
 }
