--- a/frontend/src/styles/components/TimelinePage/TableType.scss
+++ b/frontend/src/styles/components/TimelinePage/TableType.scss
@@ -1,8 +1,8 @@
 .TableType_Container {
     width: 100%; 
     display: flex; 
-    flex-direction: column; 
-    padding-right: 30px;
+    flex-direction: column;
+    margin-top : 28px;
 
     .type_buttons {
         margin-left: 20px;
