--- a/frontend/src/styles/components/TimelinePage/DetailPerformance1.scss
+++ b/frontend/src/styles/components/TimelinePage/DetailPerformance1.scss
@@ -8,6 +8,7 @@
 
 .DetailPerformance_Wrapper {
     width: 100%;
+    height: 100vh;
     margin-top : 10px;
     background-color: #fff;
     border-radius: 40px 40px 0 0;
