--- a/frontend/src/styles/components/MainPage/BoothView.scss
+++ b/frontend/src/styles/components/MainPage/BoothView.scss
@@ -37,10 +37,20 @@
     max-width: 420px;
     height: 175px;
     border-radius: 12px;
-    background: #D9D9D9;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(13, 13, 13, 0.08) 50%, rgba(33, 33, 33, 0.20) 100%), #FFF; 
 
     margin-top : 10px;
     margin-left: 14px;
 
-    text-align: center;
+    .TimelineView_BoxText {
+        color: #000;
+        font-family: Spoqa Han Sans Neo;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 140%; /* 25.2px */
+
+        margin-top : 29px;
+        margin-left : 16px;
+    }
 }
