--- a/frontend/src/styles/components/TimelinePage/SlideShow.scss
+++ b/frontend/src/styles/components/TimelinePage/SlideShow.scss
@@ -1,15 +1,21 @@
+.slider_Container {
+    display: flex;
+    width: 100%;
+    height : 50vh;
+}
 .slider {
     display: flex;
     flex-direction: row;
+    width: 100%;
+    justify-content: center;
     overflow-x: scroll;
-    margin-left : 56px;
-    margin-right : 56px;
     gap : 15px;
     z-index: 1;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .slide {
-  
      /* 모든 슬라이드에 대해 blur 효과 적용 */
      filter: none;
      transition: filter 1s ease-in-out;
