--- a/frontend/src/components/container/InformationPage/drag.scss
+++ b/frontend/src/components/container/InformationPage/drag.scss
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   border-radius: 24px 24px 0px 0px;
-  background: #FFF;
+  background: #fff;
   box-shadow: 0px -2px 6px rgba(0, 0, 0, 0.1);
   transform: translateY(0);
   /* 초기 상태에서 아래에 위치 */
@@ -13,7 +13,9 @@
   /* 초기 높이를 최대 높이로 설정 (전체 화면 높이) */
   overflow: hidden;
   /* 넘치는 내용 숨김 */
-  transition: max-height 0.3s ease-in-out, transform 0.3s ease-in-out;
+  transition:
+    max-height 0.3s ease-in-out,
+    transform 0.3s ease-in-out;
   z-index: 999;
   touch-action: none;
   cursor: grab;
@@ -54,7 +56,6 @@
   background-color: #0056b3;
 }
 
-
 .scrollable-container {
   max-height: 400px;
   overflow-y: auto;
@@ -66,11 +67,11 @@
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
-  line-height: 134.523%
+  line-height: 134.523%;
 }
 
 .mini-window-Time {
-  color: #4F75FF;
+  color: #4f75ff;
   font-family: Inter;
   font-size: 12px;
   font-style: normal;
