--- a/frontend/src/styles/components/MainPage/TimelineView.scss
+++ b/frontend/src/styles/components/MainPage/TimelineView.scss
@@ -66,10 +66,7 @@
         margin-top:25px;
         margin-left: -90px;
     }
-
-    .TimelineView_BoxImg {
-        //position: absolute;
-        //margin-left : 48vw;
-        margin-left:103px;
-    }
+}
+.TimelineView_BoxImg {
+    margin-left: auto;
 }
