--- a/frontend/src/styles/components/common/Menu.scss
+++ b/frontend/src/styles/components/common/Menu.scss
@@ -1,28 +1,41 @@
 /* modal창 외부화면 */
 .Modal {
-  background-color: rgb(255, 255, 255);
-  color: rgba(0, 0, 0, 0.87);
+    background-color: rgb(255, 255, 255);
+    color: rgba(0, 0, 0, 0.87);
 
-  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0px 8px 10px -5px,
-    rgba(0, 0, 0, 0.14) 0px 16px 24px 2px,
-    rgba(0, 0, 0, 0.12) 0px 6px 30px 5px;
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    box-shadow:
+      rgba(0, 0, 0, 0.2) 0px 8px 10px -5px,
+      rgba(0, 0, 0, 0.14) 0px 16px 24px 2px,
+      rgba(0, 0, 0, 0.12) 0px 6px 30px 5px;
 
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
 
-  height: 100%;
-  flex: 1 0 auto;
+    width: auto;
+    height: 100%;
+    flex: 1 0 auto;
 
-  position: fixed;
-  top: 0px;
-  outline: 0px;
-  right: 0px;
+    position: fixed;
+    top: 0px;
+    outline: 0px;
+    right: 0px;
 
-  z-index: 1000; // 김승찬 추가
-  overflow: auto;
+    z-index: 1000; // 김승찬 추가
+    overflow: hidden;
+    animation: change 1s ease forwards;
+}
+
+@keyframes change {
+  from {
+    transform: translateX(100%);
+    visibility: visible;
+  }
+
+  to {
+    transform: translateX(0%);
+  }
 }
 
 /* modal창 */
