--- a/frontend/src/styles/components/TimelinePage/DetailTable2.scss
+++ b/frontend/src/styles/components/TimelinePage/DetailTable2.scss
@@ -25,6 +25,11 @@
     line-height: normal;
 }
 
+.Time_text2 {
+    margin-left:2px;
+    margin-top:0.5px;
+}
+
 .TimeList2_items {
     display: flex;
     flex-direction: column;
@@ -39,6 +44,7 @@
     display: flex;
     flex-direction: row;
     width : auto;
+    margin-right : 12px;
 }
 
 .TimeList_item2 {
@@ -54,6 +60,8 @@
     border : none;
     border-radius: 50%;
     background-color: lightgray;
+    margin-left: auto;
+    z-index:1;
 }
 
 .DetailTable2_HorizonBar {
@@ -86,9 +94,14 @@
     line-height: normal;
 }
 
+.Information_text2 {
+    margin-left:3px;
+}
+
 .Box_Collection2 {
     display: flex;
     flex-direction: column;
+    font-family: Spoqa Han Sans Neo;
 }
 .Information2Box1 {
     width: 255px;
@@ -126,4 +139,65 @@
     background: var(--light-gray, #EEE);
     box-shadow: 0px 2px 8px 0px rgba(99, 99, 99, 0.20);
     margin-top : 12px;
+}
+
+
+
+.Information_TextBox2 {
+    display: flex;
+    flex-direction: column;
+
+    padding-left : 14px;
+}
+
+.Information_MainTitle2 {
+    color: var(--black, #212121);
+    font-family: Spoqa Han Sans Neo;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.Information_SubTitle2 {
+    color: var(--gray-2, #919094);
+    font-family: Spoqa Han Sans Neo;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+
+    margin-top:-10px;
+    margin-left:15px;
+}
+
+.Time_Icon {
+    width: 12px;
+    height: 12px;
+    margin-top:-2px;
+}
+
+
+.Location_Icon {
+    width: 12px;
+    height: 12px;
+    margin-top:-2px;
+}
+
+.Information_time2 {
+    color: #AB85A2;
+    font-family: Spoqa Han Sans Neo;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+
+    margin-top:-10px;
+    margin-left:15px;
+}
+
+.Information_DisplaySet2 {
+    display : flex;
+    flex-direction: row;
+    margin-top : 6px;
 }
