--- a/frontend/src/components/container/InformationPage/informationfcn.scss
+++ b/frontend/src/components/container/InformationPage/informationfcn.scss
@@ -76,6 +76,7 @@
 }
 
 .filter-container {
+  width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -148,19 +149,26 @@
       background: var(--main, #4f75ff);
     }
   }
+}
+
+.filter-favorite-tags {
+  display: flex;
+  overflow-x: auto; // 추가된 부분
+  align-items: center;
+  white-space: nowrap; // 추가된 부분
 
   .favorite-tag-button {
+    display: inline-flex;
     margin-right: 7px;
     margin-bottom: 7px;
 
-    border: none;
     border-radius: 999px;
-    border: 0.7px solid #dfdfdf;
+    border: 0.7px solid var(--main, #4f75ff);
     background: #fff;
-    color: #a3a2a2;
+    color: var(--main, #4f75ff);
     text-align: center;
     font-family: Spoqa Han Sans Neo;
-    font-size: 10px; // 태그 폰트 크기
+    font-size: 12px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -168,12 +176,6 @@
     margin-right: 8px;
     margin-top: 5px;
     cursor: pointer;
-
-    &.active {
-      color: var(--main, #4f75ff);
-      border: 0.7px solid var(--main, #4f75ff);
-      background: #fff;
-    }
   }
 }
 
