--- a/frontend/src/styles/components/common/Menu.scss
+++ b/frontend/src/styles/components/common/Menu.scss
@@ -19,8 +19,8 @@
 
     position: fixed;
     top: 0px;
-    outline: 0px;
     right: 0px;
+    border-radius: 10px 0 0 10px;
 
     z-index: 1000; // 김승찬 추가
     overflow: hidden;
