--- a/frontend/src/components/container/InformationPage/drag.scss
+++ b/frontend/src/components/container/InformationPage/drag.scss
@@ -1,13 +1,13 @@
 /* dragInfo 컴포넌트 스타일 */
 .mini-window-container {
-  position: absolute;
-  bottom: 0px;
+  position: fixed;
+  bottom: 0;
   left: 0;
   right: 0;
   border-radius: 24px 24px 0px 0px;
   background: #fff;
   box-shadow: 0px -2px 6px rgba(0, 0, 0, 0.1);
-  transform: translateY(100%);
+  transform: translateY(0);
   /* 초기 상태에서 아래에 위치 */
   max-height: 100vh;
   /* 초기 높이를 최대 높이로 설정 (전체 화면 높이) */
@@ -20,10 +20,6 @@
   touch-action: none;
   cursor: grab;
   /* 드래그 커서 설정 */
-
-  .mini-window-container.opened {
-    transform: translateY(0);
-  }
 }
 
 .mini-window-container.dragging {
