--- a/frontend/src/styles/components/EventPage/EventCategory.scss
+++ b/frontend/src/styles/components/EventPage/EventCategory.scss
@@ -1,24 +1,22 @@
-// CreatorList.scss
-.CreatorList_Container{
+// EventCategory.scss
+.EventCategory_Container{
     display: flex;
     flex-direction: column;
     width: 100%;
     height : 100vh;
-    margin: 0 0 auto 0;
+    margin: auto;
 }
 
-.category-selector {
+.EventCategory-selector {
     display: flex;
+    width: 100%;
     border-bottom: 2px solid #D8DCE0;
-    width: 90%;
     height: 30px;
-    margin: 10px auto;
-
 }
 
-.category-button {
+.EventCategory-button {
 
-    margin-left: 16%;
+    margin-left: 10%;
     border: none; 
     background: transparent; 
     outline: none; 
@@ -29,36 +27,36 @@
     font-size: 16px;
     line-height: 23px;
 
-    display: flex;
-    align-items: flex-end;
-    text-align: center;
+    //display: flex;
+    //align-items: flex-end;
+    //text-align: center;
 
     color: #D8DCE0;
 
-    border-bottom: 2px solid transparent;
-    padding-bottom: 10px; 
+    //border-bottom: 2px solid transparent;
+
 }
 
-.category-button.selected {
+.EventCategory-button.selected {
     font-family: 'Spoqa Han Sans Neo';
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 23px;
 
-    display: flex;
-    align-items: flex-end;
-    text-align: center;
+    //display: flex;
+    // align-items: flex-end;
+    // text-align: center;
     
     color: #4F75FF;
-    margin-bottom: -2.5px;
+    margin-bottom: -2px;
     
     border-bottom: 2px solid var(--main, #4F75FF);;
   }
   
   
 
-.Descriptions {
+.EventDescriptions {
     margin: 30px 20px;
     font-family: 'Spoqa Han Sans Neo';
     font-style: normal;
@@ -67,14 +65,3 @@
     line-height: 25px;
     color: #454545;
 }
-
-.CreatorListBlock {
-    box-sizing: border-box;
-    padding-bottom: 3rem;
-    width: 375px;
-    margin: 0 auto;
-    margin-top: 1rem;
-    margin-bottom: 10%;
-}
-
-
