--- a/frontend/src/styles/components/TimelinePage/Events.scss
+++ b/frontend/src/styles/components/TimelinePage/Events.scss
@@ -23,7 +23,7 @@
     margin-left: 220px;
     margin-top: -35px;
 
-    color: var(--gray-2, #919094);
+    color: var(--gray-4, #919094);
     font-family: Spoqa Han Sans Neo;
     font-size: 16px;
     font-style: normal;
@@ -87,7 +87,7 @@
     font-family: Spoqa Han Sans Neo;
     font-size: 12px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     line-height: normal;
 }
 
@@ -107,7 +107,7 @@
     font-family: Spoqa Han Sans Neo;
     font-size: 12px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 600;
     line-height: normal;
 }
 
@@ -123,11 +123,11 @@
     margin-left:120px;
     margin-top:-24px;
 
-    color: var(--black, #212121);
+    color: var(--gray-4, #1B1B1F);
     font-family: Spoqa Han Sans Neo;
     font-size: 12px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 600;
     line-height: normal;
 }
 
