--- a/frontend/src/styles/components/MainPage/NumberBox.scss
+++ b/frontend/src/styles/components/MainPage/NumberBox.scss
@@ -31,6 +31,6 @@
     width: 41.818px;
     height: 2.41px;
     margin-top : 2.41px;
-    background: #E1F3FF;
+    background: #e1f3ff00;
     box-shadow: 0px 1.20629px 3.21678px 0px rgba(0, 0, 0, 0.24);
 }
