--- a/frontend/src/styles/components/MainPage/MainView.scss
+++ b/frontend/src/styles/components/MainPage/MainView.scss
@@ -1,9 +1,18 @@
-.MainView_Container {
+.MainView_Container1 {
     display: flex;
     flex-direction: column;
     width: 100%;
     height : 100vh;
     background-image: url('../../../assets/MainPage/MainBackground1.png');
+    background-size: cover;
+}
+
+.MainView_Container2 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height : 100vh;
+    background-image: url('../../../assets/MainPage/MainBackground2.png');
     background-size: cover;
 }
 
