--- a/frontend/src/components/container/InformationPage/informationfcn.scss
+++ b/frontend/src/components/container/InformationPage/informationfcn.scss
@@ -76,109 +76,143 @@
   }
 }
 
-.filter-container {
-  width: 100%;
+// .filters-layout-container {
+//   display: flex;
+//   justify-content: center;
+//   flex-direction: column;
+//   width: 100%;
+// }
+
+.filters-layout-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 16px;
-  padding-top: 0;
-  padding-right: 0;
-}
-
-.filter-title-container {
-  display: flex;
-  // justify-content: center;
-  align-items: center;
-}
-
-.filter-title {
-  color: #505050;
-  font-family: Spoqa Han Sans Neo;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-
-.filter-expand {
-  position: absolute;
-  left: 126px;
-  top: 352px;
-  width: 16px;
-  height: 16px;
-  transform: rotate(90deg);
-  color: #505050;
-  font-family: Spoqa Han Sans Neo;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
-.filter-tags {
   width: 100%;
-  display: flex;
-  justify-content: flex-start; // 수정된 부분
-  align-items: center;
-  flex-wrap: wrap;
-
-  .tag-button {
-    margin-right: 7px;
-    margin-bottom: 7px;
-
-    border: none;
-    border-radius: 999px;
-    border: 0.7px solid #dfdfdf;
-    background: #fff;
-    color: #a3a2a2;
-    text-align: center;
-    font-family: Spoqa Han Sans Neo;
-    font-size: 10px; // 태그 폰트 크기
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    padding: 5px 10px; // 태그 사이즈 크기
-    margin-right: 8px;
-    margin-top: 5px;
-    cursor: pointer;
-
-    &.active {
-      color: #fff;
-      border-radius: 999px;
-      border: 0.7px solid #fff;
-      background: var(--main, #4f75ff);
+  .filter-container {
+    .filter-favorite-container {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      // padding: 16px;
+      // padding-top: 0;
+      // padding-right: 0;
+      width: 100%;
     }
-  }
-}
 
-.filter-favorite-tags {
-  display: flex;
-  overflow-x: auto; // 추가된 부분
-  align-items: center;
-  white-space: nowrap; // 추가된 부분
+    .filter-title-container {
+      display: flex;
+      // justify-content: center;
+      align-items: center;
+    }
 
-  .favorite-tag-button {
-    display: inline-flex;
-    margin-right: 7px;
-    margin-bottom: 7px;
+    .filter-title {
+      color: #505050;
+      font-family: Spoqa Han Sans Neo;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+      margin-top: 0;
+      margin-bottom: 10px;
+      padding: 10px;
+      padding-bottom: 0;
+    }
 
-    border-radius: 999px;
-    border: 0.7px solid var(--main, #4f75ff);
-    background: #fff;
-    color: var(--main, #4f75ff);
-    text-align: center;
-    font-family: Spoqa Han Sans Neo;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    padding: 5px 10px; // 태그 사이즈 크기
-    margin-right: 8px;
-    margin-top: 5px;
-    cursor: pointer;
+    .filter-tags {
+      // width: 100%;
+      display: flex;
+      justify-content: flex-start; // 수정된 부분
+      align-items: center;
+      flex-wrap: wrap;
+      padding: 10px;
+      padding-top: 0;
+
+      .tag-button {
+        margin-right: 7px;
+        margin-bottom: 7px;
+
+        border: none;
+        border-radius: 999px;
+        border: 0.7px solid #dfdfdf;
+        background: #fff;
+        color: #a3a2a2;
+        text-align: center;
+        font-family: Spoqa Han Sans Neo;
+        font-size: 10px; // 태그 폰트 크기
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        padding: 5px 10px; // 태그 사이즈 크기
+        margin-right: 8px;
+        margin-top: 5px;
+        cursor: pointer;
+
+        &.active {
+          color: #fff;
+          border-radius: 999px;
+          border: 0.7px solid #fff;
+          background: var(--main, #4f75ff);
+        }
+      }
+    }
+
+    .filter-favorite-tags {
+      display: flex;
+      overflow-x: auto; // 추가된 부분
+      align-items: center;
+      white-space: nowrap; // 추가된 부분
+      padding: 10px;
+      padding-top: 0;
+
+      .favorite-tag-button {
+        display: inline-flex;
+        margin-right: 7px;
+        margin-bottom: 7px;
+
+        border-radius: 999px;
+        border: 0.7px solid var(--main, #4f75ff);
+        background: #fff;
+        color: var(--main, #4f75ff);
+        text-align: center;
+        font-family: Spoqa Han Sans Neo;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        padding: 5px 10px; // 태그 사이즈 크기
+        margin-right: 8px;
+        margin-top: 5px;
+        cursor: pointer;
+      }
+    }
+
+    .filter-expand {
+      position: absolute;
+      left: 126px;
+      top: 352px;
+      width: 16px;
+      height: 16px;
+      transform: rotate(90deg);
+      color: #505050;
+      font-family: Spoqa Han Sans Neo;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+    }
+
+    .DesignUnivFavorite {
+      color: #a3a2a2;
+      font-family: Spoqa Han Sans Neo;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      padding: 10px;
+      padding-left: 0;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
   }
 }
 
