--- a/frontend/src/styles/components/CreatorPage/CreatorList.scss
+++ b/frontend/src/styles/components/CreatorPage/CreatorList.scss
@@ -26,7 +26,7 @@
     font-family: 'Spoqa Han Sans Neo';
     font-style: normal;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 23px;
 
     display: flex;
@@ -43,17 +43,17 @@
     font-family: 'Spoqa Han Sans Neo';
     font-style: normal;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 23px;
 
     display: flex;
     align-items: flex-end;
     text-align: center;
     
-    color: #000000;
+    color: #4F75FF;
     margin-bottom: -2.5px;
     
-    border-bottom: 4px solid var(--main, #4F75FF);;
+    border-bottom: 2px solid var(--main, #4F75FF);;
   }
   
   
