--- a/frontend/src/styles/components/TimelinePage/SlideShow.scss
+++ b/frontend/src/styles/components/TimelinePage/SlideShow.scss
@@ -148,6 +148,7 @@
         font-weight: 500;
         line-height: normal;
         margin-top : 8px;
+        margin-bottom: auto;
     }
 }
 
@@ -163,5 +164,6 @@
 
     text-align: center;
 
-    margin-top : 47px;
+    margin-top : auto;
+    margin-bottom: 17px;
 }
