[승찬] "부스 정보 페이지 96%"

--- a/frontend/src/components/container/InformationPage/drag.scss
+++ b/frontend/src/components/container/InformationPage/drag.scss
@@ -2,7 +2,7 @@
 .mini-window-container {
   position: fixed;
   bottom: 0;
-  left: 0;
+  // left: 0;
   right: 0;
   border-radius: 24px 24px 0px 0px;
   background: #fff;
