--- a/frontend/src/styles/components/common/Menu.scss
+++ b/frontend/src/styles/components/common/Menu.scss
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
 
-    width: auto;
+    width: 300px;
     height: 100%;
     flex: 1 0 auto;
 
@@ -40,27 +40,30 @@
 
 /* modal창 */
 .modalBody {
+  display: flex;
+  flex-direction: column;
   width: 300px;
-  height: 100vh;
+  height: 100%;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
   box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
 }
 
-#modalCloseBtn {
-  width: 36px;
+.modalCloseBtn {
+  display: flex;
+  width: 50px;
   height: 36px;
   border: none;
   color: rgba(0, 0, 0, 0.7);
 
-  background-color: transparent;
   font-size: 30px;
-
+  background-color: transparent;
   margin-top: 32px;
-  margin-left: 14px;
+  margin-right: auto;
+  margin-left : 17px;
 }
 
-#modalCloseBtn:hover {
+.modalCloseBtn:hover {
   cursor: pointer;
 }
 
@@ -129,15 +132,15 @@
   font-family: Noto Sans KR;
   font-size: 16px;
   font-weight: 500;
-
-  margin-top: 31px;
   margin-left: 25px;
+ 
+  margin-bottom: auto;
 
   .Modal_item {
     display: flex;
     flex-direction: row;
     width : 256px;
-    margin-bottom: 31px;
+    margin-top: 31px;
     .Modal_item_direction {
       margin-left : auto;
       color: #B6B6B6;
@@ -149,15 +152,13 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  position: fixed;
-  bottom: 0;
 }
 
 .Modal_Bottom_Content {
   width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
-
   margin-left : 17px;
 
   .Festival {
@@ -182,7 +183,6 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin-top : 37px;
   margin-bottom : 12px;
 }
 
