Fix the Error about Margin

--- a/frontend/src/styles/components/EventPage/EventCategory.scss
+++ b/frontend/src/styles/components/EventPage/EventCategory.scss
@@ -27,14 +27,9 @@
     font-size: 16px;
     line-height: 23px;
 
-    //display: flex;
-    //align-items: flex-end;
-    //text-align: center;
-
     color: #D8DCE0;
-
-    //border-bottom: 2px solid transparent;
-
+    margin-left : auto;
+    margin-right : auto;
 }
 
 .EventCategory-button.selected {
