--- a/frontend/src/styles/components/CreatorPage/CreatorList.scss
+++ b/frontend/src/styles/components/CreatorPage/CreatorList.scss
@@ -17,20 +17,21 @@
 }
 
 .category-button {
-
-    margin-left: 16%;
     border: none; 
     background: transparent; 
-    outline: none; 
+    outline: none;
+    
+    margin-left : auto;
+    margin-right : auto;
 
-    font-family: 'Spoqa Han Sans Neo';
+    font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 23px;
 
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     text-align: center;
 
     color: #D8DCE0;
