--- a/frontend/src/styles/components/common/Header.scss
+++ b/frontend/src/styles/components/common/Header.scss
@@ -2,7 +2,7 @@
     display: flex;
 
     width : 100%;
-    height : 70px;
+    height : 80px;
     overflow-x: hidden;
 
     align-items: center;
@@ -34,6 +34,8 @@
 
     align-items: center;
     justify-content: center;
+    margin-left : 16px;
+    margin-right : 20px;
 }
 
 .Header_Props {
@@ -48,10 +50,10 @@
 }
 
 .Header_Img {
-    margin-left : 15px;
-    margin-right : 118px;
+    margin-right: 124px;
+    margin-left : auto;
 }
 .Header_MenuIcon {
-    margin-right : 15px;
-    margin-left : 123px;
+    margin-left : 124px;
+    margin-right : auto;
 }
