Implement the ticket in EventPage

--- a/frontend/src/styles/components/EventPage/EventCategory.scss
+++ b/frontend/src/styles/components/EventPage/EventCategory.scss
@@ -11,6 +11,8 @@
     width: 100%;
     border-bottom: 2px solid #D8DCE0;
     height: 30px;
+    margin-left : auto;
+    margin-right : auto;
 }
 
 .EventCategory-button {
