--- a/frontend/src/styles/components/EventPage/SeatDraw.scss
+++ b/frontend/src/styles/components/EventPage/SeatDraw.scss
@@ -184,14 +184,23 @@
     }
 }
 
+.SeatDraw_BottomText_Collection {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+
+    justify-content: center;
+    align-items: center;
+
+    margin-top : 60px;
+    margin-left : auto;
+    margin-right : auto;
+}
 .SeatDraw_BottomText1 {
     display: flex;
-    margin-top : 60px;
-    margin-left: auto;
-    margin-right: auto;
+
     text-align: center;
-    width: 289px;
-    height: 50px;
+
     color: #303034;
 
     font-family: Spoqa Han Sans Neo;
