--- a/frontend/src/styles/components/MainPage/CreatorView.scss
+++ b/frontend/src/styles/components/MainPage/CreatorView.scss
@@ -3,8 +3,12 @@
     flex-direction: column;
     width: 100%;
     height: 50vh;
-    margin-bottom: 193px;
-    
+    justify-content: center;
+    align-items: center;
+}
+.CreatorView_Wrapper {
+    display: flex;
+    flex-direction: column;
 }
 .Creator_Text {
 
