--- a/frontend/src/styles/components/MainPage/EventView.scss
+++ b/frontend/src/styles/components/MainPage/EventView.scss
@@ -3,7 +3,8 @@
     flex-direction: column;
     width: 100%;
     height: 50vh;
-    margin-top : 40px;
+
+    justify-content: center;
 }
 
 .EventView_Wrapper {
