--- a/frontend/src/styles/components/common/Header.scss
+++ b/frontend/src/styles/components/common/Header.scss
@@ -2,7 +2,7 @@
     display: flex;
 
     width : 100%;
-    height : 80px;
+    height : 90px;
     overflow-x: hidden;
 
     align-items: center;
@@ -24,8 +24,8 @@
     justify-content: center;
 
     position: absolute;
-    top: 0;
-    left : 0;
+    top:0;
+    left:0;
 }
 
 .Header_Wrapper {
@@ -34,8 +34,7 @@
 
     align-items: center;
     justify-content: center;
-    margin-left : 16px;
-    margin-right : 20px;
+    margin : 0 auto;
 }
 
 .Header_Props {
