--- a/frontend/src/styles/components/common/Menu.scss
+++ b/frontend/src/styles/components/common/Menu.scss
@@ -1,6 +1,6 @@
 /* modal창 외부화면 */
 .Modal {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0);
     color: rgba(0, 0, 0, 0.87);
 
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
@@ -13,18 +13,18 @@
     display: flex;
     flex-direction: column;
 
-    width: 300px;
+    width: 100%;
     height: 100%;
-    flex: 1 0 auto;
+    flex: 1;
 
     position: fixed;
     top: 0px;
     right: 0px;
+    align-items: flex-end;
     border-radius: 10px 0 0 10px;
 
     z-index: 1000; // 김승찬 추가
     overflow: hidden;
-    animation: change 1s ease forwards;
 }
 
 @keyframes change {
@@ -40,6 +40,7 @@
 
 /* modal창 */
 .modalBody {
+  animation: change 1s ease forwards;
   display: flex;
   flex-direction: column;
   width: 300px;
@@ -118,7 +119,7 @@
     .Airplane {
       position: absolute;
       top : 149px;
-      left : 100px;
+      right : 169px;
     }
   }
 }
