--- a/frontend/src/styles/components/TimelinePage/DetailTable.scss
+++ b/frontend/src/styles/components/TimelinePage/DetailTable.scss
@@ -8,12 +8,14 @@
 .DetailTable_Wrapper {
     display: flex;
     flex-direction: row;
-    margin : 0 auto;
+    margin-left: auto;
+    margin-right : auto;
 }
 
 .DetailTable_TimeList {
     display: flex;
     flex-direction: column;
+    width: auto;
     margin-top : 35px;
     margin-left : 16px;
 }
