[승찬] "형준이 코드와 합침"

--- a/frontend/src/components/container/InformationPage/informationfcn.scss
+++ b/frontend/src/components/container/InformationPage/informationfcn.scss
@@ -91,7 +91,7 @@
 
     .filter-title-container {
       display: flex;
-      // justify-content: center;
+      justify-content: space-between;
       align-items: center;
     }
 
